--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "0.58.3"
+    "react-native": "0.58.3",
+    "react-native-webview": "git+https://github.com/react-native-community/react-native-webview.git"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
